# Neogrok

./: .gitignore  Cargo.toml  README.md  neogrok.toml  retirement.md  rustfmt.toml
client/: Cargo.toml
client/lib/: args.rs  commands.rs  lib.rs
client/lib/master/: command_handler.rs  frame_handler.rs  listener.rs  mod.rs  state.rs
client/lib/slave/: listener.rs
client/src/: main.rs
common-codec/: Cargo.toml
common-codec/src/: compression.rs  lib.rs  permissions.rs
common/src/protocol/: types.rs
config/: Cargo.toml
config/src/: error.rs  inner.rs  lib.rs  permissions.rs  prelude.rs
deflate/: Cargo.toml
deflate/src/: compressor.rs  decompressor.rs  lib.rs  tests.rs
executables/server/: Cargo.toml
executables/server/lib/: commands.rs  lib.rs
executables/server/lib/config/: error.rs  permissions.rs
executables/server/lib/hisui/: main.rs  mod.rs  server.rs  state.rs
executables/server/lib/hisui/handlers/: command.rs  frame.rs  mod.rs
executables/server/lib/proxy/: client.rs
executables/server/src/: main.rs
hisui-codec/: Cargo.toml
hisui-codec/src/: error.rs  lib.rs  reader.rs  writer.rs
hisui-codec/src/protocol/: flags.rs  frame.rs  mod.rs
idpool/: Cargo.toml
idpool/src/: flat.rs  priority.rs  tests.rs
md/: BUILD.md  README.md  TODO.md
md/en/: README.md
md/ru/: README.md
medusa-codec/: Cargo.toml
medusa-codec/src/: lib.rs
neogrok/: Cargo.toml
neogrok-compression/: Cargo.toml
neogrok-compression/src/: lib.rs
neogrok-compression/src/deflate/: decompressor.rs  tests.rs
neogrok-compression/src/zstd/: decompressor.rs
neogrok-protocol/: Cargo.toml
neogrok-protocol/src/hisui/: codec_utils.rs  error.rs  reader.rs  utils.rs
neogrok/lib/: args.rs  lib.rs
neogrok/lib/master/: command_handler.rs  commands.rs  error.rs  frame_handler.rs  listener.rs  mod.rs  pool.rs  state.rs
neogrok/lib/slave/: commands.rs  listener.rs
neogrok/src/: main.rs
neogrokd/: Cargo.toml
neogrokd/lib/: infinite_future.rs  lib.rs  user.rs
neogrokd/lib/proxy/: client.rs  command.rs  error.rs  listener.rs  mod.rs  pool.rs
neogrokd/lib/tcp/: client.rs  command_handler.rs  frame_handler.rs  listener.rs  mod.rs  server.rs  state.rs
neogrokd/src/: main.rs
server/: Cargo.toml
server/lib/: infinite_future.rs  user.rs
server/lib/config/: compression.rs  error.rs  inner.rs  mod.rs  permissions.rs
server/lib/hisui/: command_handler.rs  error_handler.rs  frame_handler.rs  main.rs  mod.rs  server.rs  state.rs
server/lib/hisui/handlers/: command.rs  error.rs  frame.rs
server/lib/proxy/: client.rs  listener.rs
server/src/: main.rs
utils/src/: lib.rs
zstd/: Cargo.toml
zstd/src/: compressor.rs  decompressor.rs
