[profile.release]
lto = true
opt-level = 3

[workspace]
members = [
    "idpool",
    "neogrokd",
    "config",
    "deflate",
    "zstd",
    "neogrok",
    "medusa-codec",
    "hisui-codec",
    "common-codec",
    "utils",
]

[workspace.dependencies]
num = "0.4.0"
url = { version = "2.3.1", features = ["serde"] }

smol_str = "0.1.23"
log = "0.4.17"
byteorder = "1.4.3"
bitflags = "1.3.2"

rustc-hash = "1.1.0"
tokio = { version = "1.22.0", default-features = false, features = [
    "net",
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
    "sync",
] }
