[profile.release]
opt-level = 3
lto = true

[workspace]
members = ["packages/*", "server", "client"]

[workspace.dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
flume = { version = "0.10.14", default-features = false, features = [
    "async",
    "eventual-fairness",
] }
rustc-hash = "1.1.0"

tokio = { version = "1.22.0", default-features = false, features = [
    "net",
    "sync",
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
] }
thiserror = "1.0.37"
