[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "neo"
path = "src/main.rs"

[lib]
name = "neo"
path = "lib/lib.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }
rustc-hash = { workspace = true }

neogrok-protocol = { path = "../packages/neogrok-protocol" }

clap = { version = "4.0.29", features = ["derive"] }
anyhow = "1.0.66"
num_cpus = "1.14.0"
