[package]
name = "hisui-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { workspace = true }
tokio = { workspace = true }
bitflags = { workspace = true }
smol_str = { workspace = true }

common-codec = { path = "../common-codec" }

log = { workspace = true }
