[package]
name = "neogrok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "client"
path = "lib/lib.rs"

[[bin]]
name = "neo"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
pretty_env_logger = "0.4.0"
