[package]
name = "neogrokd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "neogrok"
path = "lib/lib.rs"

[[bin]]
name = "neogrokd"
path = "src/main.rs"

[dependencies]
config = { path = "../config" }

tokio = { workspace = true }
log = { workspace = true }
