[package]
name = "neogrokd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "neogrok"
path = "lib/lib.rs"

[[bin]]
name = "neogrokd"
path = "src/main.rs"

[dependencies]
config = { path = "../config" }

hisui-codec = { path = "../hisui-codec" }
medusa-codec = { path = "../medusa-codec" }
common-codec = { path = "../common-codec" }

fern = { version = "0.6.1", features = ["chrono"] }
chrono = { version = "0.4.23", default-features = false }

tokio = { workspace = true }
log = { workspace = true }
kanal = { workspace = true }
